--- a/SignIn.html
+++ b/SignIn.html
@@ -8,6 +8,17 @@
              #Top_UI{
                 background-color: black;
             }
+            #Middle{
+                background-color:yellow;
+                /* margin-left: 40%; */
+                height: 50%;
+                width:30%;
+                margin-left: 33%;
+            }
+            #Middle_UI{
+                margin-left: 30%;
+                margin-top: 20%
+            }
         </style>
     </head>
 
@@ -16,9 +27,11 @@
            <a href="Minstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Minstargram</button></a>       
         </div>
         <div id = "Middle">
-        <p>ID<input type="text" placeholder="아이디 입력"></p>
-        <p>PW<input type="text" placeholder="패스워드 입력"></p>
-        <button>Sign In!</button>
+            <div id="Middle_UI">
+               <p>ID&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></p>
+               <p>PW<input type="text" placeholder="패스워드 입력"></p>
+            </div>
+            <button style="margin-left:40%; font-size: 15pt;">Sign In!</button>
         </div>
     </body>
 
