--- a/Minstargram.html
+++ b/Minstargram.html
@@ -5,23 +5,23 @@
 
     <head>
         <style type="text/css">
-            #Top_UI{
+            .top-ui{
                 background-color: black;
             }
-            #Middle{
+            .middle{
 
             }
         </style>
     </head>
 
-    <body>
-        <div id="Top_UI">
+    <body style="background-image:url(Resources/보노보노.jpeg)">
+        <div class="top-ui">
             
         <a href="Minstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Minstargram</button></a>       
         <a href="SignIn.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;margin-left: 20%;border:0">Sign In</button></a>
         <a href="SignUp.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;border: 0;">Sign Up</button></a>
         </div>
-        <div id="Middle">
+        <div class="middle">
             <a>여기는 내용이 표시됩니다.</a>
         </div>
     </body>
