--- a/SignIn.html
+++ b/SignIn.html
@@ -5,33 +5,32 @@
         <meta charset="utf-8">
         <title>Minstargram</title>
         <style type="text/css">
-             #Top_UI{
+             .top-ui{
                 background-color: black;
             }
-            #Middle{
+            .middle{
                 background-color:yellow;
-                /* margin-left: 40%; */
                 height: 50%;
                 width:30%;
                 margin-left: 33%;
             }
-            #Middle_UI{
+            .middle-ui{
                 margin-left: 30%;
                 margin-top: 20%
             }
         </style>
     </head>
 
-    <body>
-        <div id="Top_UI">
+    <body style="background-image:url(Resources/signin.jpeg)">
+        <div class="top-ui">
            <a href="Minstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Minstargram</button></a>       
         </div>
-        <div id = "Middle">
-            <div id="Middle_UI">
-               <p>ID&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></p>
-               <p>PW<input type="text" placeholder="패스워드 입력"></p>
+        <div class = "middle">
+            <div class="middle-ui" style="padding-top:30%;">
+               <span>ID&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></span><br>
+               <span>PW<input type="text" placeholder="패스워드 입력"></span>
             </div>
-            <button style="margin-left:40%; font-size: 15pt;">Sign In!</button>
+            <button style="width: 41%; margin-left:29.5%; font-size: 10pt;">Sign In!</button>
         </div>
     </body>
 
