--- a/SignUp.html
+++ b/SignUp.html
@@ -5,21 +5,33 @@
         <meta charset="utf-8">
         <title>Minstargram</title>
         <style type="text/css">
-             #Top_UI{
+             .top-ui{
                 background-color: black;
+            }
+            .middle{
+                background-color:yellow;
+                height: 50%;
+                width:30%;
+                margin-left: 33%;
+            }
+            .middle-ui{
+                margin-left: 30%;
+                margin-top: 20%
             }
         </style>
     </head>
 
-    <body>
-        <div id="Top_UI">
+    <body style="background-image:url(Resources/signon.jpeg)">
+        <div class="top-ui">
            <a href="Minstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Minstargram</button></a>       
         </div>
-        <div id = "Middle">
-        <p>E-Mail<input type="text" placeholder="Email 입력"></p>
-        <p>ID<input type="text" placeholder="아이디 입력"></p>
-        <p>PW<input type="text" placeholder="패스워드 입력"></p>
-        <button>Sign Up!</button>
+        <div class = "middle">
+            <div class="middle-ui" style="padding-top:30%;">
+                <span>E-Mail<input type="text" placeholder="Email 입력"></span><br>
+                <span>ID&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></span><br>
+                <span>PW&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="패스워드 입력"></span>
+           </div>
+        <button style="width: 46%; margin-left:29.5%; font-size: 10pt;">Sign Up!</button>
         </div>
     </body>
 
