--- a/SignIn.html
+++ b/SignIn.html
@@ -3,8 +3,16 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Minstargram</title>
+        <title>Jamstargram</title>
         <style type="text/css">
+                body{
+                background: url(Resources/signin.jpeg) no-repeat 50% 50% fixed;
+                -webkit-background-size: cover;
+                -moz-background-size: cover; 
+                -o-background-size: cover; 
+                background-size: cover;
+            }
+
              .top-ui{
                 background-color: black;
             }
@@ -21,9 +29,9 @@
         </style>
     </head>
 
-    <body style="background-image:url(Resources/signin.jpeg)">
+    <body>
         <div class="top-ui">
-           <a href="Minstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Minstargram</button></a>       
+           <a href="Jamstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
         </div>
         <div class = "middle">
             <div class="middle-ui" style="padding-top:30%;">
