--- a/SignUp.html
+++ b/SignUp.html
@@ -3,8 +3,16 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Minstargram</title>
+        <title>Jamstargram</title>
         <style type="text/css">
+            body{
+                background: url(Resources/signon.jpeg) no-repeat 50% 50% fixed;
+                -webkit-background-size: cover;
+                -moz-background-size: cover; 
+                -o-background-size: cover; 
+                background-size: cover;
+            }
+
              .top-ui{
                 background-color: black;
             }
@@ -21,13 +29,13 @@
         </style>
     </head>
 
-    <body style="background-image:url(Resources/signon.jpeg)">
+    <body>
         <div class="top-ui">
-           <a href="Minstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Minstargram</button></a>       
+           <a href="Jamstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
         </div>
         <div class = "middle">
             <div class="middle-ui" style="padding-top:30%;">
-                <span>E-Mail<input type="text" placeholder="Email 입력"></span><br>
+                <span>E-Mail<input type="text" placeholder="이메일 입력"></span><br>
                 <span>ID&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></span><br>
                 <span>PW&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="패스워드 입력"></span>
            </div>
