Basic frame complete

--- a/SignIn.html
+++ b/SignIn.html
@@ -31,7 +31,7 @@
 
     <body>
         <div class="top-ui">
-           <a href="Jamstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
+           <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
         </div>
         <div class = "middle">
             <div class="middle-ui" style="padding-top:30%;">
