--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,10 @@
 <!Doctype HTML5>
 <html>
-    <meta charset="utf-8">
-    <title>Jamstargram</title>
-
     <head>
+        <meta charset="utf-8">
+        <title>Jamstargram</title>
         <style type="text/css">
              body{
-                /* background-image: url(Resources/bonobono.jpeg);
-                background-repeat: no-repeat; */
                 background: url(Resources/bonobono.jpeg) no-repeat 50% 50% fixed;
                 -webkit-background-size: cover;
                 -moz-background-size: cover; 
@@ -16,10 +13,13 @@
             }
 
             .top-ui{
-                background-color: black;
+                /* background-color: black; */
             }
             .middle{
-
+                height: 50%;
+                width:30%;
+                margin-left: 33%;
+                margin-top: 10%;
             }
         </style>
     </head>
@@ -27,12 +27,17 @@
     <body>
         <div class="top-ui">
             
-        <a href="Jamstargram.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
+        <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
         <a href="SignIn.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;margin-left: 20%;border:0">Sign In</button></a>
         <a href="SignUp.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;border: 0;">Sign Up</button></a>
         </div>
+        <div style="margin-left:30%; margin-top: 10%">
+            <span style="font-weight:900; font-size:50pt">짤방 공유 커뮤니티</span>
+        </div>
         <div class="middle">
-            <a>여기는 내용이 표시됩니다.</a>
+            <a href="Main.html" style="margin-left:10%;">
+            <button  style="border: 0;outline: 0; color: yellow; background-color: black;font-size: 30pt;">잼스타그램 시작하기!</button>
+        </a>
         </div>
     </body>
 </html>
