포스팅 기능 추가

--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
         <a href="SignUp.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;border: 0;">Sign Up</button></a>
         </div>
         <div style="margin-left:30%; margin-top: 10%">
-            <span style="font-weight:900; font-size:50pt">짤방 공유 커뮤니티</span>
+            <span style="background-color: white; font-weight:900; font-size:50pt">짤방 공유 커뮤니티</span>
         </div>
         <div class="middle">
             <a href="Main.html" style="margin-left:10%;">
