--- a/Main.html
+++ b/Main.html
@@ -10,6 +10,14 @@
             .top-ui{
                 /* background-color: black; */
             }
+            .middle-ui{
+
+            }
+            .bottom-ui{
+                position: absolute; 
+                right: 10%; 
+                bottom: 10%;
+            }
         </style>
     </head>
 
@@ -18,6 +26,12 @@
             <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
             <a href="SignIn.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;margin-left: 20%;border:0">Sign In</button></a>
             <a href="SignUp.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;border: 0;">Sign Up</button></a>
+        </div>
+        <div class="middle=ui">
+
+        </div>
+        <div class="bottom-ui">
+            <a href="posting.html"><button>글쓰기</button></a>
         </div>
     </body>
 </html>
