--- a/SignUp.html
+++ b/SignUp.html
@@ -13,7 +13,7 @@
                 background-size: cover;
             }
 
-             .top-ui{
+            .top-ui{
                 background-color: black;
             }
             .middle{
@@ -35,7 +35,7 @@
         </div>
         <div class = "middle">
             <div class="middle-ui" style="padding-top:30%;">
-                <span>E-Mail<input type="text" placeholder="이메일 입력"></span><br>
+                <span>E-Mail&nbsp;<input type="text" placeholder="이메일 입력"></span><br>
                 <span>ID&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></span><br>
                 <span>PW&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="패스워드 입력"></span>
            </div>
