--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Jamstargram</title>
+        <title>Jamstagram</title>
         <style type="text/css">
              body{
                 background: url(Resources/bonobono.jpeg) no-repeat 50% 50% fixed;
@@ -27,7 +27,7 @@
     <body>
         <div class="top-ui">
             
-        <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
+        <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstagram</button></a>       
         <a href="SignIn.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;margin-left: 20%;border:0">Sign In</button></a>
         <a href="SignUp.html"><button style="background-color: black;font-size: 30pt;color:yellowgreen;border: 0;">Sign Up</button></a>
         </div>
