--- a/posting.html
+++ b/posting.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Jamstargram</title>
+        <title>Jamstagram</title>
         <style type="text/css">
 
         .top-ui{
@@ -20,19 +20,25 @@
         </style>
     </head>
 
+    <script language="javascript">
+
+        
+
+    </script>
+
     <body>
         <div class="top-ui">
-            <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>
+            <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstagram</button></a>
         </div>
         
         <div class="middle-ui">
             <span>제목 &nbsp;<input type="text" style="width: 57.7%;" placeholder="제목을 입력하십시오"></span>
             <br><br>
-            <span><input type="text" style="width: 60%; height: 50%; letter-spacing: -5px;" ></span>
+            <span><textarea style="resize: none; width: 60%; height: 50%;"></textarea></span>
             <br><br>
-            <input type="file">
+            <input type="file" accept="image/*">
             <br><br>
-            <a href="Main.html"><button style="position: relative; left: 57.3%;">올리기</button></a>
+            <input type="submit" style="position: relative; left: 57.3%;">
         </div>
 
         <div class="bottom-ui">
