--- a/SignIn.html
+++ b/SignIn.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Jamstargram</title>
+        <title>Jamstagram</title>
         <style type="text/css">
                 body{
                 background: url(Resources/signin.jpeg) no-repeat 50% 50% fixed;
@@ -31,14 +31,15 @@
 
     <body>
         <div class="top-ui">
-           <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstargram</button></a>       
+           <a href="Index.html"><button style="background-color: black;font-size: 30pt;color:blueviolet;margin-left: 40%;border:0">Jamstagram</button></a>       
         </div>
         <div class = "middle">
             <div class="middle-ui" style="padding-top:30%;">
-               <span>ID&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></span><br>
+               <span>ID&nbsp;&nbsp;<input type="text" placeholder="아이디 입력"></span>
+               <br><br><br>
                <span>PW<input type="text" placeholder="패스워드 입력"></span>
             </div>
-            <button style="width: 41%; margin-left:29.5%; font-size: 10pt;">Sign In!</button>
+            <button style="width: 41%; margin-left:29.5%; margin-top: 25%; font-size: 10pt;">Sign In!</button>
         </div>
     </body>
 
